image overflow fix + few small fixes

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -288,6 +288,7 @@ md-menu-item > a.md-button {
         @media(max-width: 600px) {
             padding: 0 10px;
         }
+
         &.ng-enter {
             animation-name: breathing;
             animation-duration: 3s;
@@ -473,8 +474,10 @@ md-menu-item > a.md-button {
         }
     }
 
-    &.flex {
-        padding: 0;
+    @media(min-width: 600px) {
+        &.flex {
+            padding: 0;
+        }
     }
 
     .leaderboard-container {
